--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav">
 
            <li>
-               <a href="{% url 'diff' %}">
+               <a href="{% url 'checkall' %}">
                     <button class="glyphicon glyphicon-list-alt btn btn-success">&nbsp;差异核对</button>
                </a>
            </li>
