--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,11 @@
                    <button class="glyphicon glyphicon-book btn btn-success">&nbsp;档案管理</button>
                </a>
            </li>
+             <li >
+               <a href="{% url 'productview'%}">
+                   <button class="glyphicon glyphicon-book btn btn-success">&nbsp;产品列表</button>
+               </a>
+           </li>
 {#           <li ><a href="/diff/">数据差异</a> </li>#}
         </ul>
     </div>
