--- a/templates/checkdata.html
+++ b/templates/checkdata.html
@@ -245,7 +245,7 @@ font-weight:800
     }
     );
 </script>
-  <table class="table table-condensed   text-center " >
+  <table class="table table-condensed text-center " >
       <tr>
            <td colspan="9" class="lead">
                <span class="h3"><b>ERP系统数据差异核对表</b></span>
@@ -253,18 +253,18 @@ font-weight:800
            </td>
        </tr>
         <tr >
-          <td colspan="9">
+          <td colspan="9" style="width: auto;">
           <form action="{% url 'diff' %}" class="form-inline" role="form">
-              <div class=" form-group input-group">
+              <div class=" form-group input-group" >
                  <span  class="input-group-addon">店铺名称</span>
                      <select name="select_name" class="form-control " id="sel">
                          <option value="" class="selected">请选择要筛选的店铺名称</option>
                          {% for item in shop_list %}
-                             <option value="{{ item.Id }}">{{ item.sName }}</option>
+                             <option value="{{ item.Id}}">{{ item.sName }}</option>
                          {% endfor %}
                      </select>
              </div>
-            <div class=" form-group input-group">
+            <div class=" form-group input-group" >
                  <span  class="input-group-addon">销售经理</span>
                      <select name="man_name" class="form-control " id="sel">
                          <option value="" class="selected">请选择要筛选的销售经理</option>
@@ -273,8 +273,12 @@ font-weight:800
                          {% endfor %}
                      </select>
              </div>
-             <div class="form-group ">
-                  <button type="submit" class="btn btn-primary">查看</button>
+             <div class="form-group " >
+
+                  <input type="date" class="form-control" name="sel_date" id="sel_date" >
+             </div>
+             <div class="form-group " >
+                  <button type="submit" class=" glyphicon glyphicon-search btn btn-primary"></button>
              </div>
 
           </form>
@@ -282,7 +286,7 @@ font-weight:800
       </tr>
   </table>
    <table class="table table-hover text-center table-striped" id="editTable">
-       <tr class=" success text-info" style="font-size:17px;">
+       <tr class=" success text-info" style="font-size:15px;">
            <td>店&nbsp;&nbsp;铺</td>
            <td>销售经理</td>
            <td>日&nbsp;&nbsp;期</td>
@@ -315,7 +319,7 @@ font-weight:800
                <td class="mi" >{{ d.amount }}</td>
 
                {% if d.diff %}
-                    <td id="diff{{ d.id }}" class="edit h4 mi" style="color: blue;font-family:楷体; width: 20%; ">{{ d.diff}}</td>
+                    <td id="diff{{ d.id }}" class="edit h4 mi" style="color:darkblue;font-family:楷体; width: 20%; "><b>{{ d.diff}}</b></td>
                {% else %}
                     <td id="diff{{ d.id }}" class="edit"  ></td>
                {% endif %}
