修改筛选条件

--- a/templates/checkdata.html
+++ b/templates/checkdata.html
@@ -302,8 +302,14 @@ font-weight:800
                      </select>
              </div>
              <div class="form-group " >
-
                   <input type="date" class="form-control" name="sel_date" id="sel_date" >
+             </div>
+             <div class="form-group " >
+                  <select class="form-control" name="sel_none">
+                      <option class="selected" value="">请选择核查状态</option>
+                      <option value="1">未核查</option>
+
+                  </select>
              </div>
              <div class="form-group " >
                   <button type="submit" class=" glyphicon glyphicon-search btn btn-primary"></button>
