修复不能保存店铺报表名称的bug,

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -46,7 +46,7 @@
         );
     }
 function add_manager() {
-  manager_name=$.trim($("input[name=s_name]").val());
+  manager_name=$.trim($("input[name=m_name]").val());
   manager_phone=$.trim($("input[name=personal_phone]").val());
   manager_c_phone=$.trim($("input[name=c_phone]").val());
   manager_email=$.trim($("input[name=s_email]").val());
@@ -178,7 +178,7 @@ font-weight:800
                        <form class="form-group col-md-5"  id="manager_data">
                            <div class="input-group">
                                 <span class="input-group-addon">姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名</span>
-                                <input type="text" class="form-control" name="s_name">
+                                <input type="text" class="form-control" name="m_name">
                            </div>
                            <br>
                            <div class="input-group">
