--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
     <link href="{% static 'datepicker/css/bootstrap-datetimepicker.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.1.9.1.js' %}"></script>
 {#    <script src="{% static 'js/jquery.min.js' %}"></script>#}
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+{#    <script src="{% static 'js/bootstrap.js' %}"></script>#}
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'datepicker/js/bootstrap-datetimepicker.js'%}"></script>
+
     <script src="{% static 'datepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
     <script src="{% static 'datepicker/js/locales/bootstrap-datetimepicker.zh-CN.js' %}"></script>
 
