--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,13 @@
                </a>
            </li>
              <li >
-               <a href="{% url 'productview'%}">
-                   <button class="glyphicon glyphicon-book btn btn-success">&nbsp;产品列表</button>
+               <a href="{% url 'highchartarea'%}">
+                   <button class="glyphicon glyphicon-book btn btn-success">&nbsp;销售分析</button>
+               </a>
+           </li>
+           <li >
+               <a href="{% url 'easyui'%}">
+                   <button class="glyphicon glyphicon-book btn btn-success">&nbsp;人员档案</button>
                </a>
            </li>
 {#           <li ><a href="/diff/">数据差异</a> </li>#}
